# softrend

./: Cargo.toml  README.md  rustfmt.toml
src/: TODO.txt  lib.rs  main.rs  softrend.rs
src/assets/: mod.rs
src/softrend/: cube.rs  fixedpoint.rs  matrices.rs  mod.rs  rasterizer.rs  rasterizer_old.rs  simd_vec.rs
src/softrend/assets/: amogus.rgba  checkerboard.rgba  joemama.rgba  mod.rs
src/softrend/softdraw/: draw.rs  mod.rs
src/softrend/softdraw/draw/: config.rs  fixedpoint.rs  raster.rs  steps.rs
