[package]
name = "softrend4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "softrend4"
path = "src/lib.rs"

[[bin]]
name = "softrendrunner"
path = "src/main.rs"

[dependencies]
softbuffer = "0.3.3"
winit = { version = "0.29.3", features = ["rwh_05"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
panic = "abort"
debug = true